// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature toggles test _changeRemoteFeatureValues 1`] = `
{
  "test/feature_a": false,
  "test/feature_b": 1,
  "test/feature_c": "best",
  "test/feature_d": true,
  "test/feature_e": 5,
  "test/feature_f": "best",
  "test/feature_g": "activeTest",
  "test/feature_h": "appUrlTest",
}
`;

exports[`feature toggles test _changeRemoteFeatureValues 2`] = `
{
  "test/feature_a": false,
  "test/feature_b": 1,
  "test/feature_c": "new_a",
  "test/feature_d": true,
  "test/feature_e": 5,
  "test/feature_f": "best",
  "test/feature_g": "activeTest",
  "test/feature_h": "appUrlTest",
}
`;

exports[`feature toggles test getFeatureConfigs 1`] = `
{
  "test/feature_a": {
    "appUrlActive": true,
    "fallbackValue": false,
    "fallbackValueValidation": [
      false,
    ],
    "type": "boolean",
    "validationRegExp": null,
  },
  "test/feature_b": {
    "appUrlActive": true,
    "fallbackValue": 1,
    "fallbackValueValidation": [
      1,
    ],
    "type": "number",
    "validationRegExp": null,
  },
  "test/feature_c": {
    "appUrlActive": true,
    "fallbackValue": "best",
    "fallbackValueValidation": [
      "best",
    ],
    "type": "string",
    "validationRegExp": null,
  },
  "test/feature_d": {
    "appUrlActive": true,
    "fallbackValue": true,
    "fallbackValueValidation": [
      true,
    ],
    "type": "boolean",
    "validation": "^(?:true)$",
    "validationRegExp": /\\^\\(\\?:true\\)\\$/,
  },
  "test/feature_e": {
    "appUrlActive": true,
    "fallbackValue": 5,
    "fallbackValueValidation": [
      5,
    ],
    "type": "number",
    "validation": "^\\d{1}$",
    "validationRegExp": /\\^\\\\d\\{1\\}\\$/,
  },
  "test/feature_f": {
    "appUrlActive": true,
    "fallbackValue": "best",
    "fallbackValueValidation": [
      "best",
    ],
    "type": "string",
    "validation": "^(?:best|worst)$",
    "validationRegExp": /\\^\\(\\?:best\\|worst\\)\\$/,
  },
  "test/feature_g": {
    "active": false,
    "appUrlActive": true,
    "fallbackValue": "activeTest",
    "fallbackValueValidation": [
      "activeTest",
    ],
    "type": "string",
    "validationRegExp": null,
  },
  "test/feature_h": {
    "appUrl": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
    "appUrlActive": true,
    "fallbackValue": "appUrlTest",
    "fallbackValueValidation": [
      "appUrlTest",
    ],
    "type": "string",
    "validationRegExp": null,
  },
}
`;

exports[`feature toggles test initializeFeatureToggles 1`] = `
{
  "test/feature_a": {
    "fallbackValue": false,
    "type": "boolean",
  },
  "test/feature_b": {
    "fallbackValue": 1,
    "type": "number",
  },
  "test/feature_c": {
    "fallbackValue": "best",
    "type": "string",
  },
  "test/feature_d": {
    "fallbackValue": true,
    "type": "boolean",
    "validation": "^(?:true)$",
  },
  "test/feature_e": {
    "fallbackValue": 5,
    "type": "number",
    "validation": "^\\d{1}$",
  },
  "test/feature_f": {
    "fallbackValue": "best",
    "type": "string",
    "validation": "^(?:best|worst)$",
  },
  "test/feature_g": {
    "active": false,
    "fallbackValue": "activeTest",
    "type": "string",
  },
  "test/feature_h": {
    "appUrl": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
    "fallbackValue": "appUrlTest",
    "type": "string",
  },
}
`;
